--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: fluttershare
-description: A new Flutter project.
+name: SocioShare
+description: A personal project on developing a social media app.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
